2004-12-01  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_subscribe)  Log a "register" event
	if the subscription causes the subscriber to be registered.

2004-11-22  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (compile_pattern)  Change the 'ALL'
	pattern to work around a bug for the empty pattern (//).
	Thanks to Dean Collins.

2004-11-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (who_chunk)  Fix MSGNO substitution.
	Thanks to Roger Klorese.

2004-11-05  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (setcomment)  Add quotes if needed.
	(_xform)  Always validate the address.  Thanks to SRE.

	* lib/Mj/Resend.pm:  (_exclude)  Skip invalid addresses.

2004-11-04  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (g_get, index, put)  Use the FULLPATH
	substitution to avoid a substitution race condition.
	Thanks to SRE.

2004-10-30  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Place the mj_queueserv lock in the lock
	directory.  Suggested by SRE.

	* lib/Mj/Archive.pm:  (add_done)  Sort the archives to 
	prevent a race condition.
	(get_all_data, expand_range)  Support split archives.
	Thanks to Roger Klorese.
	
	* lib/Mj/Lock.pm:  (expire_locks)  Do not remove the queueserv
	lock file.

	* setup/setup_func.pl:  (make_alias_symlinks)  Unlink before
	creating a symlink.  Thanks to SRE.

2004-10-27  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (list_config_get)  Retrieve GLOBAL
	settings for the ALL pseudo-list.  Thanks to Marc Fournier.

2004-10-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Inform.pm:  (inform)  Add a shell hook.
	Suggested by Marc Fournier and John Hansen.

2004-10-22  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (lists)  Use the lists_aux_none format
	file when no auxiliary lists are found.
	Thanks to Roger Klorese.

2004-10-21  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add support for the sublist command.

	* lib/Majordomo.pm:  (sublist, _sublist)  Add support